Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/8002286/T8002286.out
T8002286.java:8:22: compiler.err.cant.resolve.location.args: kindname.method, value, , , (compiler.misc.location: kindname.annotation, T8002286.Anno, null)
1 error
